# Fantasy-Football-Tool

./: .coverage  .ff_cache.sqlite  .gitignore  Dockerfile  README.md  fantasy_football.db  ff_tool.toml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml  release.yaml  release.yml
docs/: BASE.json  bot.md  index.html  index.json  index.md  installation.md  manifest.json  meta.json  sw.js
docs/.dash/: .fallback_meta_w5.json  assistant_manifest_w1.json  assistant_manifest_w4.html  assistant_manifest_w4.json  assistant_manifest_w5.html  assistant_manifest_w5.json  context_lineups_w1.json  context_lineups_w4.json  context_lineups_w5.json  context_trades_w1.json  context_trades_w4.json  context_trades_w5.json  context_waivers_w1.json  context_waivers_w4.json  context_waivers_w5.json  ff.css  index.html  late_swap_w4.html  late_swap_w4.json  late_swap_w5.html  late_swap_w5.json  lineup_delta_w4.html  lineup_delta_w4.json  lineup_delta_w5.html  lineup_delta_w5.json  lineup_index.html  metrics.html  metrics_snapshot.json  my_team_w4.csv  my_team_w5.csv  releases_manifest.html  releases_manifest.json  results_w5.html  runbook.html  season.html  trades_w4.html  trades_w4.json  trades_w5.html  trades_w5.json  waivers_w4.html  (+2 more)
docs/assets/: app.js  index-Cs3ZDvg0.js  print.css  style.css
docs/ff/: dash.js  index.html
site/: 404.html  index.html
site/bot/: index.html
site/installation/: index.html
site/search/: search_index.json
src/ff_tool/: bot.py  (+12 more)
tests/: fantasypros_qb_week1_ppr.html  test_bot.py  test_doctor.py  test_e2e.py  test_net.py  test_schedule.py  test_scheduler.py  test_scraper.py  test_sleeper.py  test_trade.py  test_waiver.py
(+111 files in other folders)
