[tool.poetry]
name = "fantasy-football-tool"
version = "0.1.0"
description = "A toolkit for fantasy football."
authors = ["Jules <agent@email.com>"]
packages = [{include = "ff_tool", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
SQLAlchemy = "^2.0.23"
httpx = "^0.25.2"
pydantic = "^2.5.3"
typer = "^0.9.0"
pulp = "^2.7.0"
lxml = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
ruff = "^0.1.9"
mypy = "^1.7.1"

[tool.poetry.scripts]
ff-tool = "ff_tool.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
